# defrag-simulator-rs

./: .gitignore  Cargo.toml  QWEN.md  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yml
src/: app.rs  audio.rs  constants.rs  dos_files.rs  lib.rs  main.rs  models.rs  resources.rs  ui.rs
src/graphics/: fonts.rs  mod.rs  resource_manager.rs  sdl_backend.rs  win98_renderer.rs  win98_widgets.rs
src/win98/: mod.rs
