[package]
name = "defrag-simulator-rs"
version = "0.1.0"
edition = "2021"
authors = ["Guillaume Gielly <guillaume@dialup.fr>"]
license = "GPL-3.0-or-later"

[features]
default = ["terminal"]
terminal = []
graphical = ["sdl2", "image"]

[dependencies]
crossterm = "0.29"
rand = "0.8"
clap = { version = "4.0", features = ["derive"] }
ratatui = { version = "0.29.0", features = ["crossterm"] }
ctrlc = "3.5.1"
rodio = { version = "0.20.1", default-features = false, features = ["mp3"] }

# SDL2 for graphical Win95/Win98 interfaces
# Uses bundled SDL2 with vcpkg for SDL2_ttf
sdl2 = { version = "0.38", optional = true, features = ["bundled", "ttf", "static-link"] }
image = { version = "0.24", optional = true }